	PR pascal/11349. 	* p-valprint.c (pascal_value_print): Always dereference a value with 	type code TYPE_CODE_REF.